fix team blinking on mobile

--- a/src/sass/sections.scss
+++ b/src/sass/sections.scss
@@ -138,6 +138,12 @@ section {
   }
 }
 
+@media only screen and (max-width: 540px) {
+  .team__avatar__eyes {
+    animation-play-state: running;
+  }
+}
+
 @keyframes blinking {
   0%, 20% { visibility: visible; }
   10%, 40%, 100% { visibility: hidden; }
